--- a/quaker-connect.html
+++ b/quaker-connect.html
@@ -1,14 +1,23 @@
 <head>
-  <title>quaker-connect</title>
+    <title>Quaker Connect</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
+    {{> navbar }}
+    {{> hello }}
 </body>
 
 <template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+    <h1>Quaker Connect</h1>
+    <p>Connecting Friends around common interests.</p>
+</template>
+
+<template name="navbar">
+    <header class="bar bar-nav">
+        <div class="btn pull-right">
+            {{> loginButtons align="right"}}
+        </div>
+
+        <h1 class="title">Quaker Connect</h1>
+    </header>
 </template>
