--- a/quaker-connect.html
+++ b/quaker-connect.html
@@ -10,7 +10,7 @@
 <template name="hello">
     <div class="pure-g">
         <div class="pure-u-1-1">
-            <p>Connecting Friends around common interests.</p>
+            <p class="hero-tagline">Connecting Friends around common interests.</p>
         </div>
     </div>
 </template>
