Dependency clean-up.  Font size adjustment.

--- a/quaker-connect.html
+++ b/quaker-connect.html
@@ -1,6 +1,5 @@
 <head>
     <title>Quaker Connect</title>
-    <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/binz-medium" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -20,7 +19,7 @@
     <div class="pure-menu pure-menu-open pure-menu-horizontal">
         <a href="/" class="pure-menu-heading">Quaker Connect</a>
         <ul>
-            <li> {{> loginButtons class="pure-button pure-button-primary"}}</li>
+            <li> {{> loginButtons align="right"}}</li>
         </ul>
     </div>
 </template>
