Queries page rendering queries. Organizing files.

--- a/quaker-connect.html
+++ b/quaker-connect.html
@@ -39,9 +39,12 @@
 
 <template name="query">
     <h2>{{ query }}</h2>
+    <p>The query should display above.</p>
+<!--
     {{# each responses }}
         {{> response }}
     {{/ each}}
+-->
 </template>
 
 <template name="response">
